force-app/main/default/objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <label>Child</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Childs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>