force-app/main/default/objects/Child__c/fields/BehavioralSupport__c.field-meta.xml
<CustomField>
    <fullName>BehavioralSupport__c</fullName>
    <label>Behavioral Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>