force-app/main/default/objects/Child__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Childs</relationshipLabel>
    <relationshipName>Childs</relationshipName>
    <type>Lookup</type>
</CustomField>