force-app/main/default/objects/Child__c/fields/Child_Database__c.field-meta.xml
<CustomField>
    <fullName>Child_Database__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Database</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Childs</relationshipLabel>
    <relationshipName>Childs</relationshipName>
    <type>Lookup</type>
</CustomField>