force-app/main/default/objects/Child__c/fields/Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Age__c</fullName>
    <formula>TODAY() - Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>