force-app/main/default/objects/Child__c/fields/EducationalLevel__c.field-meta.xml
<CustomField>
    <fullName>EducationalLevel__c</fullName>
    <label>Educational Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-K</fullName>
            </value>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>