force-app/main/default/objects/Child__c/fields/Is_Sibling_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_Sibling_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Sibling_Group</label>
    <type>Checkbox</type>
</CustomField>