force-app/main/default/objects/Child__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>