force-app/main/default/objects/Child__c/fields/LastPlacementStatus__c.field-meta.xml
<CustomField>
    <fullName>LastPlacementStatus__c</fullName>
    <label>Last Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Disrupted</fullName>
            </value>
            <value>
                <fullName>Pending Reassignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>