force-app/main/default/objects/Child__c/fields/MedicalNeedsWillingness__c.field-meta.xml
<CustomField>
    <fullName>MedicalNeedsWillingness__c</fullName>
    <label>Medical Needs Willingness</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>ADHD</fullName>
            </value>
            <value>
                <fullName>Autism Spectrum</fullName>
            </value>
            <value>
                <fullName>Physical Disability</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>