force-app/main/default/objects/Child__c/fields/MedicalNotes__c.field-meta.xml
<CustomField>
    <fullName>MedicalNotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Notes?</label>
    <type>Checkbox</type>
</CustomField>