force-app/main/default/objects/Child__c/fields/MedicalNotesText__c.field-meta.xml
<CustomField>
    <fullName>MedicalNotesText__c</fullName>
    <label>Medical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>