force-app/main/default/objects/Child__c/fields/Needs_Reunification_Support__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reunification_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs_Reunification_Support</label>
    <type>Checkbox</type>
</CustomField>