force-app/main/default/objects/Child__c/fields/Reunification__c.field-meta.xml
<CustomField>
    <fullName>Reunification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunification?</label>
    <type>Checkbox</type>
</CustomField>