force-app/main/default/objects/Child__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <label>School_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>