force-app/main/default/objects/Child__c/fields/Sibling_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Sibling_Group_Size__c</fullName>
    <label>Sibling_Group_Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>