force-app/main/default/objects/Child__c/fields/TherapyNotes__c.field-meta.xml
<CustomField>
    <fullName>TherapyNotes__c</fullName>
    <label>Therapy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>