force-app/main/default/objects/Child__c/fields/TherapyRequired__c.field-meta.xml
<CustomField>
    <fullName>TherapyRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Therapy Required?</label>
    <type>Checkbox</type>
</CustomField>