force-app/main/default/objects/Child__c/listViews/Foster_Care_Child.listView-meta.xml
<ListView>
    <fullName>Foster_Care_Child</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>C-{</value>
    </filters>
    <label>Foster Care Child</label>
</ListView>